--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,7 @@ DB_PORT=3306
 DB_DATABASE=salaryreports
 DB_USERNAME=root
 DB_PASSWORD=
+FORWARD_DB_PORT=3306
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
